[gd_scene load_steps=12 format=1]

[ext_resource path="res://level.gd" type="Script" id=1]
[ext_resource path="res://imgs/menumobil.png" type="Texture" id=2]
[ext_resource path="res://imgs/level1.png" type="Texture" id=3]
[ext_resource path="res://imgs/level2lock.png" type="Texture" id=4]
[ext_resource path="res://imgs/level4lock.png" type="Texture" id=5]
[ext_resource path="res://imgs/level3lock.png" type="Texture" id=6]
[ext_resource path="res://imgs/level6lock.png" type="Texture" id=7]
[ext_resource path="res://imgs/level8lock.png" type="Texture" id=8]
[ext_resource path="res://imgs/level7lock.png" type="Texture" id=9]
[ext_resource path="res://imgs/level5lock.png" type="Texture" id=10]
[ext_resource path="res://imgs/backm.png" type="Texture" id=11]

[node name="level" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 400.462, 240.017 )
z/z = -10
texture = ExtResource( 2 )

[node name="levelist" type="Node2D" parent="."]

editor/display_folded = true

[node name="Level1" type="TextureButton" parent="levelist"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 180.0
margin/top = 100.0
margin/right = 308.0
margin/bottom = 214.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )

[node name="Level2" type="TextureButton" parent="levelist"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 270.0
margin/top = 150.0
margin/right = 398.0
margin/bottom = 264.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )

[node name="Level4" type="TextureButton" parent="levelist"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 450.0
margin/top = 150.0
margin/right = 578.0
margin/bottom = 264.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )

[node name="Level3" type="TextureButton" parent="levelist"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 360.0
margin/top = 100.0
margin/right = 488.0
margin/bottom = 214.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )

[node name="Level6" type="TextureButton" parent="levelist"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 270.0
margin/top = 310.0
margin/right = 398.0
margin/bottom = 424.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )

[node name="Level8" type="TextureButton" parent="levelist"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 450.0
margin/top = 310.0
margin/right = 578.0
margin/bottom = 424.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )

[node name="Level7" type="TextureButton" parent="levelist"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 360.0
margin/top = 260.0
margin/right = 488.0
margin/bottom = 374.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )

[node name="Level5" type="TextureButton" parent="levelist"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 180.0
margin/top = 260.0
margin/right = 308.0
margin/bottom = 374.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 10 )

[node name="TextureButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 9.0
margin/top = 8.0
margin/right = 99.0
margin/bottom = 112.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )

[connection signal="pressed" from="levelist/Level1" to="." method="_on_Level1_pressed"]

[connection signal="pressed" from="levelist/Level4" to="." method="_on_Level4_pressed"]

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]


